style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    text-align: center;
    background-color: #bfd0da;
    padding: 20px;
    font-family: 'Montserrat', sans-serif;
    font-size: 1rem;
}
nav {
    width: 300px;
    margin: 25px auto;
    background: #577897;
    color: white;
    border-radius: 5px;
    padding: 15px;
}
h1 {
    font-size: 0.9rem;
}
h2.title {
    font-size: 0.9rem;
}
.todoWrapper {
    color: white;
}
.container {
    position: relative;
    background-color: #577897;
}
.update {
    margin-top: 10px;
}
form {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin: 10px;
}
.toggleForm  {
    display: none;
}

.container {
    display: none;
}
.toggleContainer {
    display: block;
}
.container, form input {
    width: max(300px, 30%);
    margin: auto;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 1px 1px 1px 3px #577897;
}
input[type=checkbox] {
    /* padding: 10px; */
    width: 25px;
    height: 25px;
    margin: 10px;
    /* opacity: 0; */
    /* transform: scale(2); */
}
li label {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}
input.deleteTodo, input.clearAllRecordsBtn {
    background-color: darkred;
    color: white;
}
input.btnSubmit {
    font-weight: 800;
    font-size: 1.2rem;
}
li {
    position: relative;
    margin: 20px auto;
    list-style: none;
    font-size: 1.2rem;
    border: 3px solid #dbd858;
    padding: 10px;
    border-radius: 5px;
}
li::before {
    content: "";
    border: 7px solid;
    border-image-source: linear-gradient(45deg, rgb(244 88 127), rgb(82 23 46));
    border-image-slice: 1;
    border-bottom: none;
    border-left: none;
    border-right: none;
    position: absolute;
    width: 100%;
    border-radius: 20%;
    left: 0;
    top: -3px;
}
/*
li::after {
    content: "";
    border: 1px solid blue;
    position: absolute;
    top: 110px;
    width: 100%;
    left: 0;
    
}*/
label.addTodoItem {
   color: red;
   font-weight: 600;
}
input.clearAllRecordsBtn,
input.deleteTodo,
input.gotoEditTodo {
    padding: 3px;
    width: 100px;
    font-weight: 500;
    font-size: 1.4rem;
}
input.clearAllRecordsBtn {
    margin-top: 12px;
}
input.gotoEditTodo {
    background: #105110;
    color: white;
}
span {
    font-weight: 600;
}
input.btnSubmit {
    font-weight: 800;
    font-size: 1.2rem;
    border-radius: 10px;
    background: #105110;
    color: white;
    border: transparent;
    box-shadow: 1px 1px 1px 1px dimgrey;
}

input[type="button"]:hover
{
    transform: scale(0.9);
}
input.btnSubmit:hover{
    transform: scale(0.95);
}

input.addTodo {
    font-size: 1.3rem;
    font-weight: 700;
    text-align: center;
    box-shadow: 0px -2px 1px 1px darkgrey;
    border-radius: 10px;
    border: transparent;
    outline: 0;
}
.updateRecords {
    top: 0;
    width: max(300px, 100%);
    position: absolute;
    background: aqua;
    padding: 20px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin: auto;
    left: 0;
}
input.editedTodo {
    font-size: 1.4rem;
    font-weight: 600;
    padding: 10px;
}
input.cancelEdit,
input.saveTodo {
    font-size: 1.4rem;
    padding: 10px;
    font-weight: 600;
    color: white;
}
 input.saveTodo {    
    background: #105110;   
}
input.cancelEdit {
    background-color: darkred;
}
.showUpdateRecords {
    visibility: hidden;
}
.hideClearAllRecords {
    visibility: hidden;
}

.hideTodos {
    display: none;
}



/* slder */
.switch {
    margin-top: 0px;
    position: relative;
    display: inline-block;
    width: 55px;
    height: 25px;
  }
  
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .swithCtl {
   /* margin: 15px auto 0;
    width: 60%;*/
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    font-weight: 700;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: -webkit-gradient(linear, left top, right top, from(#378fe6), to(#3eda82));
    background: linear-gradient(to right, #378fe6, #3eda82);
    -webkit-transition: .4s;
    transition: .4s;
  } 
 
  
  .slider:before {
    position: absolute;
    content: "";
    height: 20px;
    width: 20px;
    left: 6px;
    bottom: 3px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #ccc;
  }
  
  input:focus + .slider {
    -webkit-box-shadow: 0 0 1px #2196F3;
            box-shadow: 0 0 1px #2196F3;
  }
  
  input:checked + .slider:before {
    background-color: #1e202a;
    -webkit-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }
  

